# cibot

./: hello.py  pyproject.toml
src/cibot/: __init__.py  bot_comment.py  changes.py  cli.py  coverage.py  githubref.py  release.py  settings.py  utils.py
src/cibot/backends/: base.py  github_backend.py
src/cibot/plugins/: base.py  deferred_release.py  diffcov.py  semver.py
src/cibot/plugins/templates/: coverage.jinja.md
src/cibot/storage_layers/: base.py  github_issue.py
src/cibot/templates/: coverage.jinja.md
