[project]
name = "cibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diff-cover>=9.2.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "msgspec>=0.19.0",
    "packaging>=24.2",
    "pydantic-settings>=2.8.1",
    "pygithub>=2.6.1",
    "typer>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cibot"]

[project.scripts]
cibot = "cibot.cli:main"

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"


[dependency-groups]
dev = ["ruff>=0.9.10"]


[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
src = [ "src", "tests",]

[tool.ruff.lint]
ignore = [ "TC001", "A005", "TID252", "E501", "S101", "S102", "S104", "S324", "EXE002", "D100", "D102", "D203", "D206", "D103", "D104", "D105", "D106", "D101", "D107", "D212", "D211", "PGH003", "PGH004", "N811", "N804", "N818", "N806", "N815", "ARG001", "ARG002", "DTZ003", "DTZ005", "RSE102", "SLF001", "PLR", "INP", "TRY", "SIM300", "SIM114", "DJ008", "FIX002", "S603", "S607", "TD002", "TD003", "W191", "COM812", "ISC001",]
select = [ "ALL",]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
